--- a/.gitignore
+++ b/.gitignore
@@ -97,3 +97,19 @@ local.properties
 out/
 vcpkg_installed/
 !modules/*
+!/.env*
+!/env/dist/*
+
+env/dist/bin/
+
+env/dist/examples/
+
+env/dist/conf.sh.dist
+
+env/dist/gdb.conf
+
+env/dist/run-engine
+
+env/dist/simple-restarter
+
+env/dist/starter
