--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "modules/mod-autobalance"]
 	path = modules/mod-autobalance
 	url = https://github.com/azerothcore/mod-autobalance.git
+[submodule "modules/mod-dynamic-xp"]
+	path = modules/mod-dynamic-xp
+	url = https://github.com/DedmenWoW/mod-dynamic-xp.git
